[package]
name = "mm_native"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]

[dependencies]
lazy_static = "*"
fnv = "1.0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "objidlbase", "processthreadsapi", "memoryapi", "winerror", "winuser"] }

[lib]
crate_type = ["cdylib"]