[workspace]
members = [
    "constant_tracking",
    "hook_core",
    "d3dx",
    "device_state",
    "dnclr",
    "global_state",
    "input",
    "interop",
    "mod_load",
    "mod_stats",
    "profiler",
    "shader_capture",
    "shared_dx",
    "types",
    "util",
    "hook_snapshot",
    #"snap_plugin",
    "snaplib"
]
exclude=["snap_plugin"]
resolver = "2"

[profile.release]
opt-level = 3
# this controls how many crates llvm processes in parallel, reducing it might
# improve run time performance, but slows down compilation.
# https://doc.rust-lang.org/rustc/codegen-options/index.html
codegen-units = 1
panic = 'unwind'

# other stuff
#debug = true
#rpath = false
#lto = false
#debug-assertions = false
