[package]
name = "mm_native"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]

[dependencies]
lazy_static = "*"
fnv = "1.0.6"
shared_dx9 = { path = "../SharedDX9" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
bincode = "1.3.1"
anyhow = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput"] }

[lib]
crate_type = ["cdylib"]

[profile.release]
opt-level = 3
#debug = true
#rpath = false
#lto = false
#debug-assertions = false
codegen-units = 1
panic = 'unwind'

[features]
default = []
profile = []