[package]
name = "global_state"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.1.0"
fnv = "1.0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput"] }
types = { path = "../types" }
input = { path = "../input" }
constant_tracking = { path = "../constant_tracking" }
snaplib = { path = "../snaplib" }