[package]
name = "hook_core"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
fnv = "1.0.6"
shared_dx = { path = "../shared_dx" }
profiler = { path = "../profiler" }
global_state = { path = "../global_state" }
util = { path = "../util" }
input = { path = "../input" }
constant_tracking = { path = "../constant_tracking" }
d3dx = { path = "../d3dx" }
types = { path = "../types" }
mod_load = { path = "../mod_load" }
mod_stats = { path = "../mod_stats" }
device_state = { path = "../device_state" }
dnclr = { path = "../dnclr" }
interop = { path = "../interop" }
shader_capture = { path = "../shader_capture" }
snaplib = { path = "../snaplib" }
hook_snapshot = { path = "../hook_snapshot" }
lazy_static = "1.1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "d3d11", "dxgi", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput", "sysinfoapi"] }

[lib]
crate-type = ["cdylib"]

[build-dependencies]
winres = "0.1"
rustc_version = "0.2"
chrono = "*"

[package.metadata.winres]
ProductName= "ModelMod"
FileDescription="D3D11/9 wrapper for ModelMod"
OriginalFilename = "hook_core.dll"
LegalCopyright = "Copyright © 2023"
ProductVersion = "1.2.0.0"

[features]
default = []
profile = []
mmdisable = []
frequent-updates = []