[package]
name = "input"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.6"
util = { path = "../util" }
shared_dx9 = { path = "../shared_dx9" }
profiler = { path = "../profiler" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput"] }