[package]
name = "interop"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.1.0"
shared_dx9 = { path = "../shared_dx9" }
global_state = { path = "../global_state" }
util = { path = "../util" }
d3dx = { path = "../d3dx" }
types = { path = "../types" }
