[package]
name = "shader_capture"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_dx9 = { path = "../shared_dx9" }
global_state = { path = "../global_state" }


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput"] }