[package]
name = "shared_dx"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput"] }

[dependencies]
lazy_static = "*"
fnv = "1.0.6"