[package]
name = "snap_plugin"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_dx9 = { path = "../shared_dx9" }
util = { path = "../util" }
snaplib = { path = "../snaplib" }