[package]
name = "util"
version = "0.1.0"
authors = ["John Quigley <jmquigs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ci = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["libloaderapi", "d3d9", "d3d11", "objidlbase",
    "processthreadsapi", "memoryapi", "winerror", "winuser", "winreg",
    "dinput"] }
shared_dx = { path = "../shared_dx" }
chrono = "*"
aho-corasick = "0.7.20"